--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <div id="indexpage">
         <p>{{ SHORTDESC }}</p>
         <div id="welcome-image">
-                <img src="..{{ HOME_IMAGE}}">
+            <img src="{{ HOME_IMAGE }}">
         </div>
 </div>
 <div id="downloadRibbon">
